syntax = "proto3";

package tieba;

option java_package = "com.huanchengfly.tieba.post.api.models.protos";

message RecommendTopicList {
  uint64 topicId = 1;
  string topicName = 2;
  uint32 type = 3;
  uint64 discussNum = 4;
  uint32 tag = 5;
  string topicDesc = 6;
  string topicPic = 7;
}